GNOME Bugzilla – Bug 616622
Giggle fails to display tags with the & character
Last modified: 2012-03-07 13:27:41 UTC
When the git repository contains tag with the ampersand (&) character giggle fails to display and outputs a warning on the console: (giggle:27771): Gtk-WARNING **: Failed to set text from markup due to error parsing markup: Error on line 2: Entity did not end with a semicolon; most likely you used an ampersand character without intending to start an entity - escape ampersand as &
This problem has been fixed in the development version. The fix will be available in the next major software release. Here the commit: http://git.gnome.org/browse/giggle/commit/?id=c4dcd6d4d4f994c733587e3656286d2339745b6e Thank you for your bug report.