Fix: Giggle fails to display tags/branches with the & character

Reported by Łukasz Jernaś here:
https://bugzilla.gnome.org/show_bug.cgi?id=616622